Updated automatic refreshing of messages using AJAX
added files. no need to add chat1 & chat2 (i.e. 2 modules for chat)
Messages refreshes automatically whenever new messages reaches to database.

--- a/css/sendbox.css
+++ b/css/sendbox.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #EEBBAA;
+	background-color: "#A2BE32"
 }
 form{
 	position : fixed;
@@ -17,20 +17,19 @@ form{
 }
 .sendbutton{
 	float: right;
-	margin: 10px;
+	margin: 5px;
 	padding: 10px;
 	font-size: 20px;
 	color: #00AA00;
 	font-weight: bold;
 	background-color: #333399;
 }
-
 #home{
-	float: right;
-	margin-bottom: 20px;
-	width: 100%;
-	text-align: right;
+		position: fixed;
+		right: 10px;
+		font-size: 20px;
 }
+
 
 table{
 	padding: 10px;
